# 123_Node_LSSS

./: Grad_slave1.mat  delay.csv  dpf_run1.DGIx  m_run1.DGIx  master_apr10.DGIx  master_apr10_r.DGIx  master_apr2_8:51am.DGIx  master_apr2_8:55am.DGIx  master_apr4_8:55am.DGIx  max_volt.csv  min_volt.csv  r_load.mat  slav1_run1.DGIx  slave2_run1.DGIx  slave3_run1.DGIx  slave4_run1.DGIx  time.csv  total_loss.csv
config/: freedm.cfg  timings-p4-3.cfg  timings-vvc_nw.cfg
src/: CMakeLists.txt  PosixMain.cpp
src/vvc/: DPF_return123.cpp  VR_move.cpp  V_abc_list.cpp  VoltReg_trigger.cpp  VoltVarCtrl.cpp  VoltVarCtrl.hpp  form_Ftheta.cpp  form_L.cpp  fun_return.h  grad_Volt_opt_solve.cpp  load_system_data.cpp  load_system_data.h  rename_brn.cpp  tap_searching_first.cpp  var_opt_loss_solver.cpp  volt_reg_solver.cpp
src/vvc/Old Code/: DPF_return123.cpp  VoltReg_trigger.cpp  VoltVarCtrl_old.cpp  form_Ftheta.cpp  form_Fv.cpp  form_J.cpp  form_Yabc.cpp  fun_return.h  load_system_data (copy).cpp  load_system_data.cpp  matlab_data_Dl.txt  matlab_data_R.txt  matlab_data_VR2.txt  matlab_data_VR3.txt  matlab_data_VR4.txt  matlab_data_X.txt  matlab_data_Z.txt  rename_brn.cpp  tap_searching_first.cpp  test.cpp  var_opt_loss_solver.cpp
